infra/grupo-seguridad.tf
resource "aws_security_group" "alb_sg" {
  name        = "${var.nombre_proyecto}-alb-sg"
  description = "Security group for frontend ALB"
  vpc_id      = aws_vpc.eks_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.nombre_proyecto}-alb-sg"
  }
}
